--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,7 +3,7 @@
     --skew: 25deg;
     --main-color: #0D7377; 
     --secondary-color: #323232; 
-    --contrast-color: #FFD700; 
+    --contrast-color: #FFD700;
     --background-color: #212121; 
     --accent-color: #b5b5b5; 
 }
@@ -20,9 +20,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 p {
-    font-size: 20px; 
-    line-height: 1.5; 
-}
+    font-size: 20px;
+    line-height: 1.5;
 
 /* navigation bar */
 .nav {
@@ -67,7 +66,7 @@ p {
 }
 
 .skew-menu ul li {
-    background: var(--accent-color);
+    background: var(--accent-color); 
     float: left;
     border-right: 1px solid #eee;
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
@@ -124,6 +123,9 @@ p {
         Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     transition: all 0.8s ease;
     font-size: 1em;
+    width: 90%;
+    margin: 20px auto;
+    border-radius: 8px;
 }
 
 .img-container {
@@ -134,7 +136,7 @@ p {
 .img-container img {
     width: 100%; 
     height: 100%; 
-    object-fit: cover;
+    object-fit: cover; 
 }
 
 .container_content {
@@ -194,7 +196,7 @@ p {
 
 
 .btns_more:hover {
-    background-color: var(--contrast-color); 
+    background-color: var(--contrast-color);
     transform: translateY(-2px);
     color:#ffffff;
 }
@@ -244,8 +246,8 @@ h1 {
 
 #projects > h2 {
     font-size: 2.5em; 
-    color: var(--contrast-color); 
-    margin-bottom: 20px; 
+    color: var(--contrast-color); /
+    margin: 55px 0; 
     text-align: center; 
     width: 100%;
 }
@@ -255,6 +257,7 @@ h1 {
     align-items: center;
     flex-wrap: wrap;
     padding: 40px 0;
+    margin: 20px auto;
 }
 
 .project_container .box {
@@ -276,7 +279,7 @@ h1 {
     width: 50%;
     height: 100%;
     text-decoration: none;
-    background: var(--accent-color);
+    background: var(--accent-color); 
     border-radius: 8px;
     transform: skewX(15deg);
     transition: 0.5s;
@@ -445,10 +448,14 @@ h1 {
     padding: 60px 20px;
     background: var(--secondary-color);
     color: #fff;
+    border-radius: 8px;
+    width: 90%;
+    margin: 40px auto;
 }
 
-.about_me, .skills {
+.about_me {
     width: 45%;
+    padding: 0;
 }
 
 .about_me h2, .skills h2 {
@@ -464,15 +471,31 @@ h1 {
     color: #ddd;
 }
 
-.skills_container {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
+.skills{
+    width: 25%;
 }
-
 .skill p {
     font-size: 1.2em;
     margin-bottom: 10px;
+}
+
+.skills ul {
+    list-style: none;
+    padding: 0;
+}
+
+.skills li {
+    display: flex;
+    align-items: center;
+    margin-bottom: 5px; 
+}
+
+.skills li i {
+    margin-right: 10px; 
+}
+
+.skills li span {
+    flex: 1; 
 }
 
 .skill_bar {
@@ -573,6 +596,8 @@ li:first-child {
     backdrop-filter: blur(10px);
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    width: 80%;
+    margin: 55px auto;
 }
 
 .contact-form-container, .contact-details-container {
@@ -618,7 +643,7 @@ li:first-child {
 }
 
 .contact-form-container button:hover {
-    background-color: var(--contrast-color);
+    background-color: var(--contrast-color); 
     transform: translateY(-2px);
 }
 
