--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
     </section>
 
     <section id="projects" class="project_container">
-        <h2>Projects</h2>
+        <h2>Take a look at some of my Projects</h2>
         <div class="box">
             <span></span>
             <div class="content">
@@ -79,12 +79,12 @@
         <div class="skills">
             <h2>My Skills</h2>
             <ul>
-                <li>Python</li>
-                <li>Data Analysis</li>
-                <li>Data Visualization</li>
-                <li>Power BI</li>
-                <li>Excel</li>
-                <li>Machine Learning</li>
+                <li><i class="fa-brands fa-python"></i> Python</li>
+                <li><i class="fa-solid fa-magnifying-glass-chart"></i> Data Analysis</li>
+                <li><i class="fa-solid fa-chart-pie"></i> Data Visualization</li>
+                <li><i class="fa-solid fa-database"></i> Power BI</li>
+                <li><i class="fa-solid fa-file-excel"></i> Excel</li>
+                <li><i class="fa-solid fa-chart-area"></i> Machine Learning</li>
             </ul>
         </div>
     </section>
