--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,7 @@
             <div class="content">
                 <h2>RainInsight: Rain Prediction and Forecasting</h2>
                 <p>RainInsight predicts rainfall using an LSTM model and displays weather data on interactive maps.</p>
-                <a href="https://github.com/your_username/RainInsight" target="_blank">Github Link</a>
+                <a href="https://github.com/eby0303/RainInsight" target="_blank">Github Link</a>
             </div>
         </div>
         <div class="box">
